--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,39 +40,41 @@
                 android:text="@string/entrar"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+                app:layout_constraintBottom_toTopOf="@+id/emailAddressInpt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextTextEmailAddress"
+                android:id="@+id/emailAddressInpt"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="250dp"
-                android:layout_height="42dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="11dp"
+                android:autofillHints=""
                 android:drawableEnd="@drawable/ic_email_read_24px"
                 android:ems="10"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+                app:layout_constraintBottom_toTopOf="@+id/passwordInpt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="LabelFor" />
 
             <EditText
-                android:id="@+id/editTextTextPassword"
+                android:id="@+id/passwordInpt"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="250dp"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="80dp"
+                android:autofillHints=""
                 android:drawableEnd="@drawable/ic_lock_24px"
                 android:ems="10"
-                android:hint="Senha"
+                android:hint="@string/senha"
                 android:inputType="textPassword"
                 app:layout_constraintBottom_toTopOf="@+id/loginBtn"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,10 +84,10 @@
             <Button
                 android:id="@+id/loginBtn"
                 android:layout_width="140dp"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="#407BFF"
-                android:text="Login"
+                android:text="@string/login"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
