--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
                 android:layout_width="140dp"
                 android:layout_height="50dp"
                 android:layout_marginBottom="12dp"
-                android:backgroundTint="#407BFF"
+                android:backgroundTint="#3171FF"
                 android:text="@string/login"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
