--- a/app/src/main/res/layout/activity_research_stimulated.xml
+++ b/app/src/main/res/layout/activity_research_stimulated.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.179">
 
         <Button
-            android:id="@+id/btnPesquisaEstim"
+            android:id="@+id/btnResearchSimulated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
