--- a/app/src/main/res/layout/activity_problem_set.xml
+++ b/app/src/main/res/layout/activity_problem_set.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C4D6FBFF"
+    android:backgroundTint="#C4D6FB"
     tools:context=".ProblemSetActivity">
 
     <TextView
