--- a/app/src/main/res/layout/activity_create_new_voter.xml
+++ b/app/src/main/res/layout/activity_create_new_voter.xml
@@ -142,7 +142,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardUserPhone" />
 
-    <!-- Botões lado a lado -->
+    <!-- CARD Localização -->
+    <TextView
+        android:id="@+id/cardUserLocation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="#FFFFFF"
+        android:elevation="3dp"
+        android:padding="16dp"
+        android:text="Localização: -"
+        android:textColor="#333333"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardCandidateName" />
+
+    <!-- Botões -->
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="0dp"
@@ -155,7 +171,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/buttonFinish"
-        app:layout_constraintTop_toBottomOf="@id/cardCandidateName"
+        app:layout_constraintTop_toBottomOf="@id/cardUserLocation"
         app:layout_constraintHorizontal_weight="1" />
 
     <Button
